k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starttech-backend
  namespace: starttech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starttech-backend
  template:
    metadata:
      labels:
        app: starttech-backend
    spec:
      containers:
      - name: backend
        image: 470895880196.dkr.ecr.eu-west-1.amazonaws.com/starttech-backend-api:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
