k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: starttech-frontend
  namespace: starttech
spec:
  replicas: 2
  selector:
    matchLabels:
      app: starttech-frontend
  template:
    metadata:
      labels:
        app: starttech-frontend
    spec:
      containers:
      - name: frontend
        image: 470895880196.dkr.ecr.eu-west-1.amazonaws.com/starttech-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
