k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starttech-backend
  namespace: starttech
spec:
  selector:
    app: starttech-backend

  ports:
    - port: 80
      targetPort: 8080

  type: ClusterIP
