k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starttech-frontend
  namespace: starttech
spec:
  selector:
    app: starttech-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
