k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starttech-ingress
  namespace: starttech
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: starttech-backend
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: starttech-frontend
            port:
              number: 80
